# video_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  log_config.yaml  main.py  models.py  pyproject.toml  requirements.txt  settings.py  test_main.py
